Make the global shortcuts of Klipper work as expected

The old code just does not work. The influenced global shortcuts always
reset to 'None' after klipper restart, and users can't even set it to
its default value.

BUG: 259539
FIXED-IN:4.8.0